--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     --font: #222;
     --border: #333;
     --screen: #eee;
-    --calculator: #aaa;
+    --calculator: pink;
     --btn: #eee;
     --btn-hover: #ddd;
     --btn-active: #ccc;
